proxy/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: shop
spec:
  selector:
    app: proxy
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
